Медленная свёртка с нормализацией

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">SIDN App</string>
     <string name="buttonRecStartText">Start</string>
     <string name="buttonRecStopText">Stop</string>
+    <string name="start">Start</string>
 </resources>
